--- a/music.html
+++ b/music.html
@@ -12,10 +12,40 @@
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="css/music.css" />
+		<link rel="stylesheet" href="css/index.css" />
 	</head>
 	<body>
-		<div class="hamburger">
-			<img src="image/bars-solid.svg" alt="hamburger" class="hamburger" />
+		<div class="menu">
+			<div id="menu-hamburger" class="hamburger">
+				<a
+					href="javascript:void(0);"
+					class="icon"
+					onclick="myFunction()"
+				>
+					<img
+						src="image/bars-solid.svg"
+						alt="hamburger"
+						id="hamburger"
+					/>
+				</a>
+				<div id="myLinks">
+					<a
+						href="javascript:void(1);"
+						class="icon"
+						id="close-icon"
+						onclick="myFunction()"
+					>
+						<img
+							src="image/close-icon.svg"
+							alt="close"
+							id="close"
+						/>
+					</a>
+					<a class="link__page" href="#news">News</a>
+					<a class="link__page" href="#contact">Contact</a>
+					<a class="link__page" href="#about">About</a>
+				</div>
+			</div>
 		</div>
 		<div class="all-body">
 			<div class="__header">
