--- a/music.html
+++ b/music.html
@@ -31,7 +31,6 @@
 				<div id="myLinks">
 					<a
 						href="javascript:void(1);"
-						class="icon"
 						id="close-icon"
 						onclick="myFunction()"
 					>
@@ -41,9 +40,12 @@
 							id="close"
 						/>
 					</a>
-					<a class="link__page" href="#news">News</a>
-					<a class="link__page" href="#contact">Contact</a>
-					<a class="link__page" href="#about">About</a>
+					<div id="link__menu">
+						<a class="link__page" href="./index.html">Acceuil</a>
+						<a class="link__page" href="#">Musique</a>
+						<a class="link__page" href="./video.html">Video</a>
+						<a class="link__page" href="./merch.html">Merch</a>
+					</div>
 				</div>
 			</div>
 		</div>
