--- a/index.html
+++ b/index.html
@@ -3,13 +3,69 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Fredoka+One:wght@300;400;600;700&display=swap"
+			rel="stylesheet"
+		/>
 		<title>Document</title>
 		<script src="js/index.js"></script>
 		<link rel="stylesheet" href="css/index.css" />
 	</head>
 	<body>
-        <div class="header" >
-            
-        </div>
-    </body>
+		<div class="menu">
+			<div id="menu-hamburger" class="hamburger">
+				<a
+					href="javascript:void(0);"
+					class="icon"
+					onclick="myFunction()"
+				>
+					<img
+						src="image/bars-solid.svg"
+						alt="hamburger"
+						id="hamburger"
+					/>
+				</a>
+				<div id="myLinks">
+					<a
+						href="javascript:void(1);"
+						id="close-icon"
+						onclick="myFunction()"
+					>
+						<img
+							src="image/close-icon.svg"
+							alt="close"
+							id="close"
+						/>
+					</a>
+					<div id="link__menu">
+						<a class="link__page" href="#">Acceuil</a>
+						<a class="link__page" href="./music.html">Musique</a>
+						<a class="link__page" href="./video.html">Video</a>
+						<a class="link__page" href="./merch.html">Merch</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="header"></div>
+		<div class="all__body">
+			<div class="smith__image">
+				<img
+					id="fond__acceuil"
+					src="./image/Fond_acceuil.jpg"
+					alt="smith-cj espace"
+				/>
+			</div>
+			<div class="smith__name">
+				
+				<img
+					id="dechirure"
+					src="./image/dechirure.png"
+					alt="dechirure"
+				/>
+				<p id="bounce__phrase">Smith CJ</p>
+			</div>
+		</div>
+	</body>
 </html>
