Change home page

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 				</div>
 			</div>
 		</div>
-		<div class="header"></div>
-		<div class="all__body">
+		<!-- <div class="header"></div> -->
+		<div class="all__body__index">
 			<div class="smith__image">
 				<img
 					id="fond__acceuil"
@@ -58,13 +58,19 @@
 				/>
 			</div>
 			<div class="smith__name">
-				
 				<img
 					id="dechirure"
 					src="./image/dechirure.png"
 					alt="dechirure"
 				/>
+				<!-- <div class="photo">
+					<img
+						class="header__image"
+						src="image/smith2.png"
+						alt="smith"
+					/> -->
 				<p id="bounce__phrase">Smith CJ</p>
+				<!-- </div> -->
 			</div>
 		</div>
 	</body>
