--- a/video.html
+++ b/video.html
@@ -12,74 +12,84 @@
 		<title>Document</title>
 		<script src="js/index.js"></script>
 		<link rel="stylesheet" href="css/index.css" />
-		<link rel="stylesheet" href="css/video.css" />
+		<link rel="stylesheet" href="css/video_2.css" />
 		<title>Document</title>
 	</head>
 	<body>
-		<div class="menu">
-			<div id="menu-hamburger" class="hamburger">
-				<a
-					href="javascript:void(0);"
-					class="icon"
-					onclick="myFunction()"
-				>
-					<img
-						src="image/list-icon.svg"
-						alt="hamburger"
-						id="hamburger"
-					/>
-				</a>
-				<div id="myLinks">
-					<a
-						href="javascript:void(1);"
-						id="close-icon"
-						onclick="myFunction()"
-					>
-						<img
-							src="image/close-icon.svg"
-							alt="close"
-							id="close"
-						/>
-					</a>
-					<div id="link__menu">
-						<a class="link__page" href="#">Acceuil</a>
-						<a class="link__page" href="./music.html">Musique</a>
-						<a class="link__page" href="./video.html">Video</a>
-						<a class="link__page" href="./merch.html">Merch</a>
+		<div class="bg-container">
+			<div class="pagetemplate-videos">
+				<div class="menu">
+					<div id="menu-hamburger" class="hamburger">
+						<a
+							href="javascript:void(0);"
+							class="icon"
+							onclick="myFunction()"
+						>
+							<img
+								src="image/list-icon.svg"
+								alt="hamburger"
+								id="hamburger"
+							/>
+						</a>
+						<div id="myLinks">
+							<a
+								href="javascript:void(1);"
+								id="close-icon"
+								onclick="myFunction()"
+							>
+								<img
+									src="image/close-icon.svg"
+									alt="close"
+									id="close"
+								/>
+							</a>
+							<div id="link__menu">
+								<a class="link__page" href="index.html"
+									>Acceuil</a
+								>
+								<a class="link__page" href="./music.html"
+									>Musique</a
+								>
+								<a class="link__page" href="#">Video</a>
+								<a class="link__page" href="./merch.html"
+									>Merch</a
+								>
+							</div>
+						</div>
 					</div>
 				</div>
-			</div>
-		</div>
-		<div class="video__content">
-			<div class="video__list">
-				<div class="video__item">
-					<iframe
-						class="video"
-						width="885"
-						height="498"
-						src="https://www.youtube.com/embed/gSWgOkDjxKc?list=PLR2bDKi0t7ZkffGKsHQdA8BwX4duLrs_I"
-						title="Smith CJ - Mulema [Official Audio]"
-						frameborder="0"
-						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-						allowfullscreen
-					></iframe>
+				<div class="video__content">
+					<div class="video__list">
+						<div class="video__item">
+							<iframe
+								class="video"
+								width="885"
+								height="598"
+								src="https://www.youtube.com/embed/gSWgOkDjxKc?list=PLR2bDKi0t7ZkffGKsHQdA8BwX4duLrs_I"
+								title="Smith CJ - Mulema [Official Audio]"
+								frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+								allowfullscreen
+							></iframe>
+						</div>
+						<div class="video__item">
+							<iframe
+								class="video"
+								width="885"
+								height="598"
+								src="https://www.youtube.com/embed/gSWgOkDjxKc?list=PLR2bDKi0t7ZkffGKsHQdA8BwX4duLrs_I"
+								title="Smith CJ - Mulema [Official Audio]"
+								frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+								allowfullscreen
+							></iframe>
+						</div>
+						<div class="video__item"></div>
+						<div class="video__item"></div>
+						<div class="video__item"></div>
+						<div class="video__item"></div>
+					</div>
 				</div>
-				<div class="video__item">
-					<iframe
-						class="video"
-						width="885"
-						height="598"
-						src="https://www.youtube.com/embed/gSWgOkDjxKc?list=PLR2bDKi0t7ZkffGKsHQdA8BwX4duLrs_I"
-						title="Smith CJ - Mulema [Official Audio]"
-						frameborder="0"
-						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-						allowfullscreen
-					></iframe>
-				</div>
-				<div class="video__item"></div>
-				<div class="video__item"></div>
-				<div class="video__item"></div>
-				<div class="video__item"></div>
 			</div>
 		</div>
 	</body>
