Change background when activate menu

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			</div>
 		</div>
 		<!-- <div class="header"></div> -->
-		<div class="all__body__index">
+		<div class="all__body__index" id="darken">
 			<div class="smith__image">
 				<img
 					id="fond__acceuil"
