--- a/music.html
+++ b/music.html
@@ -49,7 +49,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="all-body">
+		<div class="all-body" id="darken">
 			<div class="__header">
 				<div class="photo">
 					<img
