Retouche home, hamburger, bolder smith

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 						/>
 					</a>
 					<div id="link__menu">
-						<a class="link__page" href="#">Acceuil</a>
-						<a class="link__page" href="./music.html">Musique</a>
+						<a class="link__page" href="#">Home</a>
+						<a class="link__page" href="./music.html">Music</a>
 						<a class="link__page" href="./video.html">Video</a>
 						<a class="link__page" href="./merch.html">Merch</a>
 					</div>
