--- a/video.html
+++ b/video.html
@@ -44,10 +44,10 @@
 							</a>
 							<div id="link__menu">
 								<a class="link__page" href="index.html"
-									>Acceuil</a
-								>
+									>Home
+								</a>
 								<a class="link__page" href="./music.html"
-									>Musique</a
+									>Music</a
 								>
 								<a class="link__page" href="#">Video</a>
 								<a class="link__page" href="./merch.html"
