--- a/merch.html
+++ b/merch.html
@@ -43,11 +43,9 @@
 								/>
 							</a>
 							<div id="link__menu">
-								<a class="link__page" href="index.html"
-									>Acceuil</a
-								>
+								<a class="link__page" href="index.html">Home</a>
 								<a class="link__page" href="./music.html"
-									>Musique</a
+									>Music</a
 								>
 								<a class="link__page" href="#">Video</a>
 								<a class="link__page" href="./merch.html"
