--- a/music.html
+++ b/music.html
@@ -41,8 +41,8 @@
 						/>
 					</a>
 					<div id="link__menu">
-						<a class="link__page" href="./index.html">Acceuil</a>
-						<a class="link__page" href="#">Musique</a>
+						<a class="link__page" href="./index.html">Home</a>
+						<a class="link__page" href="#">Music</a>
 						<a class="link__page" href="./video.html">Video</a>
 						<a class="link__page" href="./merch.html">Merch</a>
 					</div>
