fix(header) remove zindex when we remove header [BUG] : When we remove header we can clik on video due to zindex on the header

--- a/merch.html
+++ b/merch.html
@@ -47,10 +47,10 @@
 								<a class="link__page" href="./music.html"
 									>Music</a
 								>
-								<a class="link__page" href="#">Video</a>
-								<a class="link__page" href="./merch.html"
-									>Merch</a
+								<a class="link__page" href="./video.html"
+									>Video</a
 								>
+								<a class="link__page" href="#">Merch</a>
 							</div>
 						</div>
 					</div>
