--- a/video.html
+++ b/video.html
@@ -19,17 +19,19 @@
 			<div class="pagetemplate-videos">
 				<div class="menu">
 					<div id="menu-hamburger" class="hamburger">
-						<a
-							href="javascript:void(0);"
-							class="icon"
-							onclick="myFunction()"
-						>
-							<img
-								src="image/bars-solid.svg"
-								alt="hamburger"
-								id="hamburger"
-							/>
-						</a>
+						<div class="icon_div">
+							<a
+								href="javascript:void(0);"
+								class="icon"
+								onclick="myFunction()"
+							>
+								<img
+									src="image/bars-solid_2.svg"
+									alt="hamburger"
+									id="hamburger"
+								/>
+							</a>
+						</div>
 						<div id="myLinks">
 							<a
 								href="javascript:void(1);"
