fix(video):resize page on display hamburger (bug): when you click on hanburger, video-content take all the page

--- a/music.html
+++ b/music.html
@@ -51,154 +51,156 @@
 				</div>
 			</div>
 		</div>
-		<div class="all-body" id="darken">
-			<div class="__header">
-				<div class="photo">
-					<img
-						class="header__image"
-						src="image/smith2.png"
-						alt="smith"
-					/>
-				</div>
-				<div class="header__title">
-					<h1 class="profil-smith-cj">Smith CJ</h1>
-					<h2 class="description-profil-smith-cj">
-						ORIGIN(PART 1) OUT NOW
-					</h2>
-				</div>
-			</div>
-			<div class="__body">
-				<div class="first__link">
-					<div class="second__link">
-						<a
-							class="__link"
-							href="https://music.apple.com/fr/album/orijin-part-1-ep/1640070371?l=en"
-							target="_blank"
-						>
-							<div class="img__link">
-								<img
-									src="https://d1fdloi71mui9q.cloudfront.net/XGbVeprCTDWxFrZoH261_4AB90C6E-4AA4-48E1-881B-28B6AFCB16B8.jpeg"
-									alt=""
-									class="smith__img"
-								/>
-							</div>
-							<p>Apple Music</p>
-							<!-- <span></span> -->
-						</a>
+		<div id="darken">
+			<div class="all-body">
+				<div class="__header">
+					<div class="photo">
+						<img
+							class="header__image"
+							src="image/smith2.png"
+							alt="smith"
+						/>
+					</div>
+					<div class="header__title">
+						<h1 class="profil-smith-cj">Smith CJ</h1>
+						<h2 class="description-profil-smith-cj">
+							ORIGIN(PART 1) OUT NOW
+						</h2>
 					</div>
 				</div>
-				<div class="first__link">
-					<div class="second__link">
-						<a
-							class="__link"
-							href="https://www.boomplay.com/albums/53016917"
-							target="_blank"
-						>
-							<div class="img__link">
-								<img
-									src="https://d1fdloi71mui9q.cloudfront.net/UKsDq6rlSYmHWVjDLGbG_65F30DF4-DC4A-422C-9F15-19DBFD850B06.jpeg"
-									alt=""
-									class="smith__img"
-								/>
-							</div>
-							<p>Boomplay</p>
-							<!-- <span></span> -->
-						</a>
+				<div class="__body">
+					<div class="first__link">
+						<div class="second__link">
+							<a
+								class="__link"
+								href="https://music.apple.com/fr/album/orijin-part-1-ep/1640070371?l=en"
+								target="_blank"
+							>
+								<div class="img__link">
+									<img
+										src="https://d1fdloi71mui9q.cloudfront.net/XGbVeprCTDWxFrZoH261_4AB90C6E-4AA4-48E1-881B-28B6AFCB16B8.jpeg"
+										alt=""
+										class="smith__img"
+									/>
+								</div>
+								<p>Apple Music</p>
+								<!-- <span></span> -->
+							</a>
+						</div>
 					</div>
-				</div>
-				<div class="first__link">
-					<div class="second__link">
-						<a
-							class="__link"
-							href="https://open.spotify.com/album/5BWBRcIgX5W8M68HUmK8CW?si=ZYwUbcLCSQS5F9mmQPUYRw"
-							target="_blank"
-						>
-							<div class="img__link">
-								<img
-									src="https://d1fdloi71mui9q.cloudfront.net/umAYrn38QkG4YgBLllJA_DF6BA349-654D-4A44-B7B9-41D38F028A8D.jpeg"
-									alt=""
-									class="smith__img"
-								/>
-							</div>
-							<p>Spotify</p>
-							<!-- <span></span> -->
-						</a>
+					<div class="first__link">
+						<div class="second__link">
+							<a
+								class="__link"
+								href="https://www.boomplay.com/albums/53016917"
+								target="_blank"
+							>
+								<div class="img__link">
+									<img
+										src="https://d1fdloi71mui9q.cloudfront.net/UKsDq6rlSYmHWVjDLGbG_65F30DF4-DC4A-422C-9F15-19DBFD850B06.jpeg"
+										alt=""
+										class="smith__img"
+									/>
+								</div>
+								<p>Boomplay</p>
+								<!-- <span></span> -->
+							</a>
+						</div>
 					</div>
-				</div>
-				<div class="first__link">
-					<div class="second__link">
-						<a
-							class="__link"
-							href="https://deezer.page.link/AVZ5pMj93S6mvGoVA"
-							target="_blank"
-						>
-							<div class="img__link">
-								<img
-									src="https://d1fdloi71mui9q.cloudfront.net/596vZC9fSNO4ivyCrb7P_5146898B-D23E-47D4-A04A-C0146280AFF8.jpeg"
-									alt=""
-									class="smith__img"
-								/>
-							</div>
-							<p>Deezer</p>
-							<!-- <span></span> -->
-						</a>
+					<div class="first__link">
+						<div class="second__link">
+							<a
+								class="__link"
+								href="https://open.spotify.com/album/5BWBRcIgX5W8M68HUmK8CW?si=ZYwUbcLCSQS5F9mmQPUYRw"
+								target="_blank"
+							>
+								<div class="img__link">
+									<img
+										src="https://d1fdloi71mui9q.cloudfront.net/umAYrn38QkG4YgBLllJA_DF6BA349-654D-4A44-B7B9-41D38F028A8D.jpeg"
+										alt=""
+										class="smith__img"
+									/>
+								</div>
+								<p>Spotify</p>
+								<!-- <span></span> -->
+							</a>
+						</div>
 					</div>
-				</div>
-				<div class="first__link">
-					<div class="second__link">
-						<a
-							class="__link"
-							href="https://www.amazon.com/dp/B0B9T7CJP1/ref=dm_rwpmb_pur_lnd_albm_unrg"
-							target="_blank"
-						>
-							<div class="img__link">
-								<img
-									src="https://d1fdloi71mui9q.cloudfront.net/J0KXXDSGRR2CO8SsneRu_6C39E9F2-B0A9-4F3F-9C88-15DE1DFDB700.jpeg"
-									alt=""
-									class="smith__img"
-								/>
-							</div>
-							<p>Buy on Amazon</p>
-							<!-- <span></span> -->
-						</a>
+					<div class="first__link">
+						<div class="second__link">
+							<a
+								class="__link"
+								href="https://deezer.page.link/AVZ5pMj93S6mvGoVA"
+								target="_blank"
+							>
+								<div class="img__link">
+									<img
+										src="https://d1fdloi71mui9q.cloudfront.net/596vZC9fSNO4ivyCrb7P_5146898B-D23E-47D4-A04A-C0146280AFF8.jpeg"
+										alt=""
+										class="smith__img"
+									/>
+								</div>
+								<p>Deezer</p>
+								<!-- <span></span> -->
+							</a>
+						</div>
 					</div>
-				</div>
-				<div class="first__link">
-					<div class="second__link">
-						<a
-							class="__link"
-							href="https://youtube.com/playlist?list=PLR2bDKi0t7ZkffGKsHQdA8BwX4duLrs_I"
-							target="_blank"
-						>
-							<div class="img__link">
-								<img
-									src="https://d1fdloi71mui9q.cloudfront.net/AGC2Wy4TqayQc1KYMrVC_C482D7D0-BB6E-4C31-8292-733848EAD882.jpeg"
-									alt=""
-									class="smith__img"
-								/>
-							</div>
-							<p>Youtube</p>
-							<!-- <span></span> -->
-						</a>
+					<div class="first__link">
+						<div class="second__link">
+							<a
+								class="__link"
+								href="https://www.amazon.com/dp/B0B9T7CJP1/ref=dm_rwpmb_pur_lnd_albm_unrg"
+								target="_blank"
+							>
+								<div class="img__link">
+									<img
+										src="https://d1fdloi71mui9q.cloudfront.net/J0KXXDSGRR2CO8SsneRu_6C39E9F2-B0A9-4F3F-9C88-15DE1DFDB700.jpeg"
+										alt=""
+										class="smith__img"
+									/>
+								</div>
+								<p>Buy on Amazon</p>
+								<!-- <span></span> -->
+							</a>
+						</div>
 					</div>
-				</div>
-				<div class="first__link">
-					<div class="second__link">
-						<a
-							class="__link"
-							href="https://audiomack.com/smithcj/album/orijin-part-1"
-							target="_blank"
-						>
-							<div class="img__link">
-								<img
-									src="https://d1fdloi71mui9q.cloudfront.net/YhipdqE5QHKCJiYSkfmT_E6334574-CFE5-46AA-BF4C-518875DEA27B.jpeg"
-									alt=""
-									class="smith__img"
-								/>
-							</div>
-							<p>Audiomack</p>
-							<!-- <span></span> -->
-						</a>
+					<div class="first__link">
+						<div class="second__link">
+							<a
+								class="__link"
+								href="https://youtube.com/playlist?list=PLR2bDKi0t7ZkffGKsHQdA8BwX4duLrs_I"
+								target="_blank"
+							>
+								<div class="img__link">
+									<img
+										src="https://d1fdloi71mui9q.cloudfront.net/AGC2Wy4TqayQc1KYMrVC_C482D7D0-BB6E-4C31-8292-733848EAD882.jpeg"
+										alt=""
+										class="smith__img"
+									/>
+								</div>
+								<p>Youtube</p>
+								<!-- <span></span> -->
+							</a>
+						</div>
+					</div>
+					<div class="first__link">
+						<div class="second__link">
+							<a
+								class="__link"
+								href="https://audiomack.com/smithcj/album/orijin-part-1"
+								target="_blank"
+							>
+								<div class="img__link">
+									<img
+										src="https://d1fdloi71mui9q.cloudfront.net/YhipdqE5QHKCJiYSkfmT_E6334574-CFE5-46AA-BF4C-518875DEA27B.jpeg"
+										alt=""
+										class="smith__img"
+									/>
+								</div>
+								<p>Audiomack</p>
+								<!-- <span></span> -->
+							</a>
+						</div>
 					</div>
 				</div>
 			</div>
