--- a/video.html
+++ b/video.html
@@ -59,69 +59,71 @@
 						</div>
 					</div>
 				</div>
-				<div class="video__content" id="darken">
-					<div class="video__list">
-						<div class="video__item">
-							<iframe
-								class="video"
-								width="885"
-								height="598"
-								src="https://www.youtube.com/embed/gSWgOkDjxKc?list=PLR2bDKi0t7ZkffGKsHQdA8BwX4duLrs_I"
-								title="Smith CJ - Mulema [Official Audio]"
-								frameborder="0"
-								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-								allowfullscreen
-							></iframe>
+				<div id="darken">
+					<div class="video__content">
+						<div class="video__list">
+							<div class="video__item">
+								<iframe
+									class="video"
+									width="885"
+									height="598"
+									src="https://www.youtube.com/embed/gSWgOkDjxKc?list=PLR2bDKi0t7ZkffGKsHQdA8BwX4duLrs_I"
+									title="Smith CJ - Mulema [Official Audio]"
+									frameborder="0"
+									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+									allowfullscreen
+								></iframe>
+							</div>
+							<div class="video__item">
+								<iframe
+									class="video"
+									width="885"
+									height="498"
+									src="https://www.youtube.com/embed/qanALrrbQWc?list=PLR2bDKi0t7ZkffGKsHQdA8BwX4duLrs_I"
+									title="Smith CJ - Dibango [Official Audio]"
+									frameborder="0"
+									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+									allowfullscreen
+								></iframe>
+							</div>
+							<div class="video__item">
+								<iframe
+									class="video"
+									width="885"
+									height="498"
+									src="https://www.youtube.com/embed/dDFLspSXmUI?list=PLR2bDKi0t7ZkffGKsHQdA8BwX4duLrs_I"
+									title="Smith CJ - This Kinda Gyal [Official Audio]"
+									frameborder="0"
+									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+									allowfullscreen
+								></iframe>
+							</div>
+							<div class="video__item">
+								<iframe
+									class="video"
+									width="885"
+									height="498"
+									src="https://www.youtube.com/embed/DbmqJKtRZTI?list=PLR2bDKi0t7ZkffGKsHQdA8BwX4duLrs_I"
+									title="Smith CJ - African Mah Veuh [Official Audio]"
+									frameborder="0"
+									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+									allowfullscreen
+								></iframe>
+							</div>
+							<div class="video__item">
+								<iframe
+									class="video"
+									width="885"
+									height="498"
+									src="https://www.youtube.com/embed/7P_9_7zlw_Y?list=PLR2bDKi0t7ZkffGKsHQdA8BwX4duLrs_I"
+									title="Smith CJ - Summer Temptation [Official Audio]"
+									frameborder="0"
+									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+									allowfullscreen
+								></iframe>
+							</div>
+							<div class="video__item"></div>
 						</div>
-						<div class="video__item">
-							<iframe
-								class="video"
-								width="885"
-								height="498"
-								src="https://www.youtube.com/embed/qanALrrbQWc?list=PLR2bDKi0t7ZkffGKsHQdA8BwX4duLrs_I"
-								title="Smith CJ - Dibango [Official Audio]"
-								frameborder="0"
-								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-								allowfullscreen
-							></iframe>
-						</div>
-						<div class="video__item">
-							<iframe
-								class="video"
-								width="885"
-								height="498"
-								src="https://www.youtube.com/embed/dDFLspSXmUI?list=PLR2bDKi0t7ZkffGKsHQdA8BwX4duLrs_I"
-								title="Smith CJ - This Kinda Gyal [Official Audio]"
-								frameborder="0"
-								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-								allowfullscreen
-							></iframe>
-						</div>
-						<div class="video__item">
-							<iframe
-								class="video"
-								width="885"
-								height="498"
-								src="https://www.youtube.com/embed/DbmqJKtRZTI?list=PLR2bDKi0t7ZkffGKsHQdA8BwX4duLrs_I"
-								title="Smith CJ - African Mah Veuh [Official Audio]"
-								frameborder="0"
-								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-								allowfullscreen
-							></iframe>
-						</div>
-						<div class="video__item">
-							<iframe
-								class="video"
-								width="885"
-								height="498"
-								src="https://www.youtube.com/embed/7P_9_7zlw_Y?list=PLR2bDKi0t7ZkffGKsHQdA8BwX4duLrs_I"
-								title="Smith CJ - Summer Temptation [Official Audio]"
-								frameborder="0"
-								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-								allowfullscreen
-							></iframe>
-						</div>
-						<div class="video__item"></div>
 					</div>
 				</div>
 			</div>
