--- a/index.html
+++ b/index.html
@@ -51,28 +51,30 @@
 			</div>
 		</div>
 		<!-- <div class="header"></div> -->
-		<div class="all__body__index" id="darken">
-			<div class="smith__image">
-				<img
-					id="fond__acceuil"
-					src="./image/Fond_acceuil.jpg"
-					alt="smith-cj espace"
-				/>
-			</div>
-			<div class="smith__name">
-				<img
-					id="dechirure"
-					src="./image/dechirure.png"
-					alt="dechirure"
-				/>
-				<!-- <div class="photo">
+		<div id="darken">
+			<div class="all__body__index">
+				<div class="smith__image">
+					<img
+						id="fond__acceuil"
+						src="./image/Fond_acceuil.jpg"
+						alt="smith-cj espace"
+					/>
+				</div>
+				<div class="smith__name">
+					<img
+						id="dechirure"
+						src="./image/dechirure.png"
+						alt="dechirure"
+					/>
+					<!-- <div class="photo">
 					<img
 						class="header__image"
 						src="image/smith2.png"
 						alt="smith"
 					/> -->
-				<p id="bounce__phrase">Smith CJ</p>
-				<!-- </div> -->
+					<p id="bounce__phrase">Smith CJ</p>
+					<!-- </div> -->
+				</div>
 			</div>
 		</div>
 	</body>
