--- a/merch.html
+++ b/merch.html
@@ -58,41 +58,44 @@
 					</div>
 				</div>
 				<!-- Slideshow container -->
-				<div class="slideshow-container" id="darken">
-					<!-- Full-width images with number and caption text -->
-					<div class="mySlides fade">
-						<div class="numbertext">1 / 3</div>
-						<img
-							src="./image/comming_soon.jpg"
-							style="width: 100%"
-						/>
-						<!-- <img src="img1.jpg" style="width: 100%" /> -->
-						<div class="text">Caption Text</div>
+				<div id="darken">
+					<div class="slideshow-container">
+						<!-- Full-width images with number and caption text -->
+						<div class="mySlides fade">
+							<div class="numbertext">1 / 3</div>
+							<img
+								src="./image/comming_soon.jpg"
+								style="width: 100%"
+							/>
+							<!-- <img src="img1.jpg" style="width: 100%" /> -->
+							<div class="text">Caption Text</div>
+						</div>
+
+						<div class="mySlides fade">
+							<div class="numbertext">2 / 3</div>
+							<img
+								src="./image/comming_soon.jpg"
+								style="width: 100%"
+							/>
+
+							<div class="text">Caption Two</div>
+						</div>
+
+						<div class="mySlides fade">
+							<div class="numbertext">3 / 3</div>
+							<img
+								src="./image/comming_soon.jpg"
+								style="width: 100%"
+							/>
+							<div class="text">Caption Three</div>
+						</div>
+
+						<!-- Next and previous buttons -->
+						<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+						<a class="next" onclick="plusSlides(1)">&#10095;</a>
 					</div>
-
-					<div class="mySlides fade">
-						<div class="numbertext">2 / 3</div>
-						<img
-							src="./image/comming_soon.jpg"
-							style="width: 100%"
-						/>
-
-						<div class="text">Caption Two</div>
-					</div>
-
-					<div class="mySlides fade">
-						<div class="numbertext">3 / 3</div>
-						<img
-							src="./image/comming_soon.jpg"
-							style="width: 100%"
-						/>
-						<div class="text">Caption Three</div>
-					</div>
-
-					<!-- Next and previous buttons -->
-					<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-					<a class="next" onclick="plusSlides(1)">&#10095;</a>
 				</div>
+
 				<br />
 
 				<!-- The dots/circles -->
