--- a/music.html
+++ b/music.html
@@ -24,7 +24,7 @@
 						onclick="myFunction()"
 					>
 						<img
-							src="image/bars-solid_2.svg"
+							src="image/bars-solid.svg"
 							alt="hamburger"
 							id="hamburger"
 						/>
