--- a/merch.html
+++ b/merch.html
@@ -26,7 +26,7 @@
 								onclick="myFunction()"
 							>
 								<img
-									src="image/bars-solid_2.svg"
+									src="image/bars-solid.svg"
 									alt="hamburger"
 									id="hamburger"
 								/>
